<resources>
    <string name="app_name">My Stopwatch</string>
    <string name="clockImg">clockImg</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="lap">LAP</string>
    <string name="set_your_time">Set Your Time</string>
    <string name="set_time">Set Time</string>

    <string name="initial_time">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>


</resources>